--- a/style.css
+++ b/style.css
@@ -1,70 +1,44 @@
 body {
   margin: 0;
-  height: 100vh;
   background: pink;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Poppins', sans-serif;
+  font-family: Arial;
 }
 
-.card {
-  background: rgba(255, 255, 255, 0.25);
-  backdrop-filter: blur(10px);
-  width: 90%;
-  max-width: 350px;
-  padding: 25px;
+.box {
+  background: rgba(255,255,255,0.3);
+  padding: 20px;
+  width: 320px;
   text-align: center;
   border-radius: 20px;
 }
 
-h2 {
-  color: #b30059;
-  margin-bottom: 5px;
-}
+h3 { color: #b30059; }
+h1 { color: #800040; }
 
-h1 {
-  color: #800040;
-  margin-top: 0;
-}
-
-#question {
-  font-size: 16px;
-  margin: 15px 0;
-}
-
-#gif {
+img {
   width: 150px;
   margin: 10px 0;
 }
 
-.buttons {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 15px;
-}
-
 button {
-  padding: 15px 25px;
+  width: 120px;
+  padding: 12px;
   font-size: 18px;
+  margin: 8px;
   border: none;
   cursor: pointer;
 }
 
-#yesBtn {
+.yes {
   background: red;
   color: white;
 }
 
-#noBtn {
+.no {
   background: white;
-  color: black;
   border: 2px solid red;
-}
-
-.back-btn {
-  margin-top: 20px;
-  background: black;
-  color: white;
-  padding: 10px 20px;
 }
